Fix sidebar alignment   - Update clear archive menu item presentation

--- a/app/components/Sidebar.scss
+++ b/app/components/Sidebar.scss
@@ -10,7 +10,7 @@
   position: sticky;
   margin-right: 10px;
   width: 50px;
-  margin-top: 0px;
+  margin-top: 50px;
   top: 50px;
   align-items: center;
   overflow: hidden !important;
@@ -35,6 +35,9 @@
   &.expanded {
     padding: 10px 0;
     width: 200px;
+    > div > button {
+      width: 100%;
+    }
     .sidebar-tooltip {
       opacity: 0;
       height: 0;
@@ -49,7 +52,7 @@
     .expandable-menu {
       width: 100%;
     }
-    .sorting-options {
+    .sub-menu {
       > div {
         margin-left: 15px;
       }
